<resources>
    <string name="app_name">Test Task</string>
    <string name="continue_label">Continue</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="take_photo">Take photo</string>
    <string name="logout">LogOut</string>
    <string name="photo_1">Photo 1</string>
    <string name="photo_2">Photo 2</string>
    <string name="photo_3">Photo 3</string>
    <string name="camera_txt_msg">We\'re now taking photos of you [5,4,3,2,1]</string>
    <string name="wrong_creds_msg">Wrong credentials!</string>
    <string name="no_network">No network !</string>
</resources>
