<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vmodel"
            type="digital.equinox.interviewapp_2020.ui.main.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.LoginFragment">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/holo_green_light"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login"
            style="@style/EdtTextStyle"
            android:layout_marginTop="@dimen/login_margin_top"
            android:hint="@string/login"
            android:text='@={vmodel.username}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            style="@style/EdtTextStyle"
            android:layout_marginTop="@dimen/login_password_margin"
            android:hint="@string/password"
            android:text='@={vmodel.pswd}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <Button
            style="@style/ButtonStyle"
            android:enabled="@{vmodel.loginBtnEnable}"
            android:onClick="@{vmodel::login}"
            android:text="@string/continue_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
